Fix Boolean usage; javadoc tags
git-svn-id: https://svn.apache.org/repos/asf/jakarta/jmeter/trunk@323605 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: b26416858cb61d81db4978b588a69de12e100b56